<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    tools:context="polito.artuino.FilterActivity">

    <include
        android:id="@+id/next_forward_bar"
        layout="@layout/filter_layout_send_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="16dp">

        <Switch
            android:id="@+id/switchXDOG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="serif-monospace"
            android:text="@string/switchxdog" />

        <Button
            android:id="@+id/buttonFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="#a9c7d2"
            android:fontFamily="serif-monospace"
            android:onClick="doneFilter"
            android:text="@string/btn_filter" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutXDOG"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewKappa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextKappa"
                android:text="@string/kappastring" />

            <EditText
                android:id="@+id/editTextKappa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:paddingBottom="4dp"
                android:text="@string/kappavalue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewSigma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextSigma"
                android:text="@string/sigmastring" />

            <EditText
                android:id="@+id/editTextSigma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:paddingBottom="4dp"
                android:text="@string/sigmavalue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewTau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextTau"
                android:text="@string/taustring" />

            <EditText
                android:id="@+id/editTextTau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:paddingBottom="4dp"
                android:text="@string/tauvalue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewPhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextPhi"
                android:text="@string/phistring" />

            <EditText
                android:id="@+id/editTextPhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:paddingBottom="4dp"
                android:text="@string/phivalue" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMean"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewAdaptiveMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/snipperAdaptiveMethod"
                android:text="@string/adaptive_method" />

            <Spinner
                android:id="@+id/snipperAdaptiveMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:prompt="@string/method_prompt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewBlockSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextBlockSize"
                android:text="@string/block_size" />

            <EditText
                android:id="@+id/editTextBlockSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="number"
                android:paddingBottom="4dp"
                android:text="@string/block_sizevalue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewConstant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextConstant"
                android:text="@string/constantstring" />

            <EditText
                android:id="@+id/editTextConstant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:paddingBottom="4dp"
                android:text="@string/constantvalue" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:srcCompat="@android:color/holo_green_dark" />

</LinearLayout>

